--- a/HumanResource/HumanResource.csproj
+++ b/HumanResource/HumanResource.csproj
@@ -6,12 +6,13 @@
 
   <ItemGroup>
     <None Remove="Microsoft.AspNetCore.SignalR.Client" />
-    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.17" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
