added reference to baseshared library proect

--- a/CyberSecurity/CyberSecurity/Shared/CyberSecurity.Shared.csproj
+++ b/CyberSecurity/CyberSecurity/Shared/CyberSecurity.Shared.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BaseLibrary\BaseLibrary.csproj" />
+  </ItemGroup>
 </Project>
