* WeatherForecast.cs: * Counter.razor: * FetchData.razor: * WeatherForecastController.cs:
* CyberSecurity.Server.csproj: removed default files and assorciated
  links

--- a/CyberSecurity/CyberSecurity/Server/CyberSecurity.Server.csproj
+++ b/CyberSecurity/CyberSecurity/Server/CyberSecurity.Server.csproj
@@ -11,9 +11,13 @@
   <ItemGroup>
     <None Remove="CyberSecurity.Client" />
     <None Remove="CyberSecurity.Shared" />
+    <None Remove="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Client\CyberSecurity.Client.csproj" />
     <ProjectReference Include="..\Shared\CyberSecurity.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
