* LogEntry.cs: * Events.razor: * Logging.razor: * Registration.razor: updates for logging page of central server
* CentralServer.csproj: updated logging

--- a/CentralServer/CentralServer.csproj
+++ b/CentralServer/CentralServer.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <None Remove="Hubs\" />
+    <None Remove="Components\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Hubs\" />
+    <Folder Include="Components\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseLibrary\BaseLibrary.csproj">
