--- a/HumanResource/HumanResource.csproj
+++ b/HumanResource/HumanResource.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <None Remove="Microsoft.AspNetCore.SignalR.Client" />
     <None Remove="Data\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.17" />
@@ -18,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
