--- a/SharedLibrary/SharedLibrary.csproj
+++ b/SharedLibrary/SharedLibrary.csproj
@@ -11,10 +11,16 @@
     <None Remove="Services\" />
     <None Remove="Data\" />
     <None Remove="Microsoft.AspNetCore.SignalR.Client" />
+    <None Remove="Data\Logistics\" />
+    <None Remove="Data\HumanResource\" />
+    <None Remove="Data\Finance\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Data\" />
+    <Folder Include="Data\Logistics\" />
+    <Folder Include="Data\HumanResource\" />
+    <Folder Include="Data\Finance\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.17" />
