--- a/CentralServer/appsettings.json
+++ b/CentralServer/appsettings.json
@@ -1,5 +1,4 @@
-﻿
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,6 +12,7 @@
     "ChatIPAddress": "127.0.1.5",
     "Port": 5000
   },
+  "CentralServerBaseUrl": "https://localhost:7000",
   "DepartmentName": "CentralServer",
   "AllowedDepartments": [ "Finance", "HumanResources", "Logistics", "CyberSecurity" ]
 }
