--- a/HumanResource/appsettings.json
+++ b/HumanResource/appsettings.json
@@ -12,5 +12,6 @@
     "ChatIPAddress": "127.0.1.5",
     "Port": 5000
   },
+  "CentralServerBaseUrl": "https://localhost:7000",
   "DepartmentName": "HumanResources"
 }
