--- a/SharedLibrary/SharedLibrary.csproj
+++ b/SharedLibrary/SharedLibrary.csproj
@@ -14,6 +14,11 @@
     <None Remove="Data\Logistics\" />
     <None Remove="Data\HumanResource\" />
     <None Remove="Data\Finance\" />
+    <None Remove="Abstract\" />
+    <None Remove="Interfaces\" />
+    <None Remove="Interfaces\Finance\" />
+    <None Remove="Interfaces\HumanResource\" />
+    <None Remove="Interfaces\Logistics\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -21,6 +26,11 @@
     <Folder Include="Data\Logistics\" />
     <Folder Include="Data\HumanResource\" />
     <Folder Include="Data\Finance\" />
+    <Folder Include="Abstract\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\Finance\" />
+    <Folder Include="Interfaces\HumanResource\" />
+    <Folder Include="Interfaces\Logistics\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.17" />
