--- a/CentralServer/appsettings.json
+++ b/CentralServer/appsettings.json
@@ -14,5 +14,6 @@
   },
   "CentralServerBaseUrl": "https://localhost:62690",
   "DepartmentName": "CentralServer",
+  "CentralServerDB": "NACS_database.db",
   "AllowedDepartments": [ "Finance", "HumanResources", "Logistics", "CyberSecurity" ]
 }
