minor updates focussing on config files and port mapping issues

--- a/Logistics/appsettings.json
+++ b/Logistics/appsettings.json
@@ -8,10 +8,11 @@
   },
   "AllowedHosts": "*",
   "NetworkConfig": {
-    "IPAddress": "127.0.4.1",
+    "IPAddress": "https://localhost",
     "ChatIPAddress": "127.0.1.5",
-    "Port": 5000
+    "Port": 57238
   },
   "CentralServerBaseUrl": "https://localhost:62690",
+  "httpCentralServerBaseUrl": "http://localhost:64102",
   "DepartmentName": "Logistics"
 }
