--- a/BaseLibrary/BaseLibrary.csproj
+++ b/BaseLibrary/BaseLibrary.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DataModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataModels\" />
+  </ItemGroup>
 </Project>
